Update website and poster

--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
       We assess the validity of these models' outputs as solutions to the inverse problems and conduct a thorough analysis of
       the reliability of the models' estimates of uncertainty over the solution.
       Overall, we find that the IMLE-based <a href="https://niopeng.github.io/CHIMLE/">CHIMLE</a> method outperforms other methods in terms of producing valid solutions and
-      reliable uncertainty estimates.
+      reliable uncertainty estimates. For more details, please refer to our <a href="./contents/paper.pdf">paper</a> and <a href="./contents/poster.pdf">poster</a>.
     </p>
+
+    <hr>
 
       <h2 id="uncertainty">Uncertainty Quantification</h2>
         <p>We measure the model uncertainty using a sampling-based conformal prediction method from <a href="https://arxiv.org/pdf/2211.09795.pdf">Horwitz et al.</a>. The constructed confidence
@@ -96,7 +98,7 @@
         <h3>Image Decompression</h3>
         <img src="./website/dc.png" alt="Description of image" style="display: block; margin: auto; width: 100%; height: auto; margin-bottom: 20px;">
         
-
+        <hr>
         <h2 id="valid">Output Validity</h2>
         <p>We evaluate the output validity of each method by comparing the original input to the solution to the forward problem
         applied to the generated image.
